continued to make notebokks

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -106,22 +106,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Today is Thursday.\n",
-      "4\n",
-      "I have 63 apples.\n",
-      "hello hello hello hello hello \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# this line is a comment; Python completely ignores it\n",
     "\n",
@@ -143,7 +132,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "my_name = 'Ben'\n",
+    "my_age = 15\n",
+    "\n",
+    "print('Hello my name is', my_name, 'and I am', my_age, 'years old.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Multiple variables can be stored in a single **list**..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -152,15 +164,113 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello my name is Ben and I am 15 years old.\n"
+      "barry\n",
+      "['alex', 'barry', 'cynthia']\n",
+      "edward\n",
+      "The list has 5 elements.\n"
      ]
     }
    ],
    "source": [
-    "my_name = 'Ben'\n",
-    "my_age = 15\n",
+    "list_of_names = ['alex', 'barry', 'cynthia', 'daisy', 'edward']\n",
     "\n",
-    "print('Hello my name is', my_name, 'and I am', my_age, 'years old.')"
+    "print( list_of_names[1] ) # print the **second** name\n",
+    "\n",
+    "print( list_of_names[0:3] ) # print the first **3** names\n",
+    "\n",
+    "print( list_of_names[-1] ) # print the last name\n",
+    "\n",
+    "print( 'The list has', len(list_of_names), 'elements.' )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(indexing exercise, explicitly show that lists can hold any object, even a list)\n",
+    "hammer in indexing bc people have trouble with it\n",
+    "every other item, the items backwards, etc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What if you want to do some operation on every item in a list?\n",
+    "\n",
+    "**loops**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALEX\n",
+      "BARRY\n",
+      "CYNTHIA\n",
+      "DAISY\n",
+      "EDWARD\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name in list_of_names:\n",
+    "    print( name.upper() )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index in range(11):\n",
+    "    print(index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "exercise: from a given list of 100 names, ages, and weights, print one line per person\n",
+    "\n",
+    "first, load the lists\n",
+    "then, inspect them\n",
+    "then, print the stuff out"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "final bonus exercise: same thing but go back and make each first letter of name a capital"
    ]
   },
   {
