--- a/tweepy.ipynb
+++ b/tweepy.ipynb
@@ -15,12 +15,99 @@
     "\n",
     "Today we will learn about blah blah.\n",
     "\n",
-    "---"
+    "---\n",
+    "\n",
+    "<font color='green'> \n",
+    "    **Exercise**: \n",
+    "\n",
+    "    <ul>\n",
+    "    <li> go to https://apps.twitter.com </li>\n",
+    "    <li> Create New App, with content of your choosing </li>\n",
+    "    <li> Go to Keys and Access Tokens, Create My Access Token</li>\n",
+    "    <li> In the next code cell, define 4 variables for your:\n",
+    "        <ul>\n",
+    "        <li> API Key </li>\n",
+    "        <li> API Secret </li>\n",
+    "        <li> Access Token </li>\n",
+    "        <li> Access Token Secret </li>\n",
+    "        </ul>\n",
+    "    </li>\n",
+    "    </ul>\n",
+    "\n",
+    "</font>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# define variables for your access keys\n",
+    "api_key = '' # API Key\n",
+    "api_secret = '' # API Secret -- you normally would not keep this secret in your code!\n",
+    "access_token = '' # Access Token\n",
+    "access_token_secret = '' # Access Token Secret -- you normally would not keep this secret in your code!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## DEBUG CELL\n",
+    "api_key = 'kIrE1akPytCbN6dtfZoxmCmU3'\n",
+    "api_secret = 'EnztGXvO3QDRWGAJZVV6UGrb0pT9EY3D9R9uSmtp1BuZFoMFZQ'\n",
+    "access_token = '96322197-bzzWFgpdpQD4cFFdqLEEhfhl2t3zhlYhqYFUWf70x'\n",
+    "access_token_secret = 'vF1nsbQzJeHOdDaFTNy0EREk7UVaDupehPaAZ5vNx5ZBn'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "<font color='green'> \n",
+    "    **Exercise**: Using your keys and access tokens, use the tweepy package to authorize the Twitter API from within Python. (I have given you the code, so just run the cell.)\n",
+    "\n",
+    "</font>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import tweepy as tw\n",
+    " \n",
+    "# authorize the api\n",
+    "auth = tw.OAuthHandler(api_key, api_secret)\n",
+    "auth.set_access_token(access_token, access_token_secret)\n",
+    "api = tw.API(auth)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color='green'> \n",
+    "    **Exercise**: Use your api object to retrieve the 10 most recent posts on your twitter feed.\n",
+    "\n",
+    "</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -29,61 +116,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fox News (@FoxNews)\n",
-      "Court: 'K-19: The Widowmaker' sub must be removed from river  https://t.co/GsK5bExXnx https://t.co/AluIYQSKnS\n",
-      "\n",
-      "The New York Times (@nytimes)\n",
-      "Mike Connors, Glass-Jawed Star of ‘Mannix,’ Dies at 91 https://t.co/kqHPtUSt88\n",
-      "\n",
-      "New Scientist (@newscientist)\n",
-      "Three ways to find your purpose in life and reap the benefits https://t.co/zmV9yyUybm https://t.co/zr9fw4YFVU\n",
-      "\n",
-      "The Economist (@TheEconomist)\n",
-      "Border-adjustment tax reform would change the way firms calculate their profits for tax purposes https://t.co/3rbG3IlloP\n",
-      "\n",
-      "The New York Times (@nytimes)\n",
-      "\"CNN could once again be the place Ted Turner envisioned and built years ago,\" @JessicaYellin writes in @nytopinion https://t.co/pPMiyIwy80\n",
-      "\n",
-      "The Globe and Mail (@globeandmail)\n",
-      "First Nations family takes Ottawa to court over denied dental coverage https://t.co/J1iNJDjq2u @GlobePolitics #cdnpoli\n",
-      "\n",
       "CNN (@CNN)\n",
-      "AI and robots are on a course to transform industries and replace human contact. But what happens when they fail?… https://t.co/oijAzMK0pW\n",
+      "Some of the people directly affected by President Trump's travel ban have told us their stories:… https://t.co/JUy5TRiyaC\n",
       "\n",
-      "The Economist (@TheEconomist)\n",
-      "Could we soon be able to print organs to put into human bodies? Our healthcare correspondent @natashaloder discusses https://t.co/xbkd2lQrYO\n",
+      "The New York Times (@nytimes)\n",
+      "Senator John McCain said parts of President Trump's immigration ban \"will give ISIS some more propaganda\" https://t.co/LYBYJW1hVH\n",
+      "\n",
+      "CBC News (@CBCNews)\n",
+      "Shkreli strikes back and new concerns about paid plasma: CBC's health newsletter https://t.co/Zrrtx9Ua0U https://t.co/XadrX9GV61\n",
       "\n",
       "Fox News (@FoxNews)\n",
-      "Ahead of Trump meeting, British PM calls for US-UK to 'renew their special relationship'  https://t.co/mS70eP4VRw https://t.co/FESfZA8dcy\n",
+      ".@JudgeJeanine on Illegal Immigration: 'Law &amp; Order is Back in the West' https://t.co/oEKUgrRNlQ https://t.co/ZO5NoY0nU5\n",
       "\n",
-      "J. Craig Venter (@JCVenter)\n",
-      "RT @scifri: Tomorrow, we're talking to California's @JerryBrownGov about how states can take the lead on science issues – with or without W…\n",
+      "CBC News (@CBCNews)\n",
+      "RT @CBCAlerts: US Senator John McCain calls Trump's immigration order confusing, saying it 'will probably, in some areas, give ISIS some mo…\n",
+      "\n",
+      "CBC News (@CBCNews)\n",
+      "RT @CBCAlerts: Chilean firefighters still fighting raging forest fires, which have so far spread to affect 480,000 hectares.\n",
+      "\n",
+      "Fox News (@FoxNews)\n",
+      "Swamp: Drained - @POTUS signs lobbying ban for officials. https://t.co/wksfzSwS1s\n",
+      "\n",
+      "The Economist (@TheEconomist)\n",
+      "Why are the wings of some American cliff swallows getting longer? From the archive https://t.co/spV693HLbV\n",
+      "\n",
+      "The New Yorker (@NewYorker)\n",
+      "A cartoon by Roz Chast. Follow our cartoon Instagram to see more: https://t.co/99J6osy5qB https://t.co/bBGJ8cgXhc\n",
+      "\n",
+      "Alex Piet (@alexpiet)\n",
+      "RT @wbialek: Previously avoided politics in this venue.  No longer.  Among other stimuli, a young Iranian colleague at Princeton likely tra…\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "import tweepy as tw\n",
-    "import pandas as pd\n",
+    "n_posts = 10\n",
     "\n",
-    "# keys and tokens\n",
-    "api_key = 'DEdm30gHSEZvDxqDs1vsjXV39'\n",
-    "api_secret = 'pd2wCRoy17NihX1wPScQm8qwj0FR8cyXEwMeQWAvixk3SihPCr'\n",
-    "access_token = '96322197-OagHjgItORlAuTBLFJ9XEjia3pxagbvRPXAyQfAMS'\n",
-    "access_token_secret = '387os63xxvV05NcWvVeL3HaRKiyaE0xWCbkMZcmOvrpog'\n",
-    " \n",
-    "# authorize api\n",
-    "auth = tw.OAuthHandler(api_key, api_secret)\n",
-    "auth.set_access_token(access_token, access_token_secret)\n",
-    "api = tw.API(auth)\n",
-    "  \n",
-    "for tweet in tw.Cursor(api.home_timeline).items(10):\n",
+    "for tweet in tw.Cursor(api.home_timeline).items(n_posts):\n",
     "    author = tweet.author.name\n",
     "    sname = tweet.author.screen_name\n",
     "    text = tweet.text\n",
     "    \n",
     "    print('{} (@{})\\n{}'.format(author, sname, text))\n",
     "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "-get another person's tweets\n",
+    "-put tweets into a pandas object or something\n",
+    "-then count frequencies of words"
    ]
   },
   {
@@ -97,6 +183,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [conda root]",
    "language": "python",
