more content into lesson1 and reorganized file structure

--- a/lesson3_huffpost/huffpost.ipynb
+++ b/lesson3_huffpost/huffpost.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -41,18 +41,41 @@
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'InlineResponse2004' object does not support indexing",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-1d6d02441c19>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mqs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'InlineResponse2004' object does not support indexing"
-     ]
+     "data": {
+      "text/plain": [
+       "{'charts': [],\n",
+       " 'created_at': datetime.datetime(2017, 1, 25, 16, 13, 2, tzinfo=tzutc()),\n",
+       " 'election_date': None,\n",
+       " 'n_polls': 1,\n",
+       " 'name': '2017 Virginia Gubernatorial GE',\n",
+       " 'responses': [{'incumbent': False,\n",
+       "                'label': 'Wagner',\n",
+       "                'name': 'Frank Wagner',\n",
+       "                'party': 'Republican'},\n",
+       "               {'incumbent': False,\n",
+       "                'label': 'Perriello',\n",
+       "                'name': 'Tom Perriello',\n",
+       "                'party': 'Democrat'},\n",
+       "               {'incumbent': False,\n",
+       "                'label': 'Other',\n",
+       "                'name': 'Other',\n",
+       "                'party': None},\n",
+       "               {'incumbent': False,\n",
+       "                'label': 'Undecided',\n",
+       "                'name': 'Undecided',\n",
+       "                'party': None}],\n",
+       " 'slug': '17-VA-Gov-GE-WavP',\n",
+       " 'tags': []}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "api."
+   ]
   },
   {
    "cell_type": "code",
