--- a/lesson1_intro/intro.ipynb
+++ b/lesson1_intro/intro.ipynb
@@ -106,11 +106,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Today is Thursday.\n",
+      "4\n",
+      "I have 63 apples.\n",
+      "hello hello hello hello hello \n"
+     ]
+    }
+   ],
    "source": [
     "# this line is a comment; Python completely ignores it\n",
     "\n",
@@ -127,19 +138,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's learn about **variables**. Blah blah..."
+    "Now let's learn about **variables**. A variable is just a container for anything: a number, a word or sentence (\"string\"), anything at all. Have a look at these examples."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello my name is ben and I am 15 years old.\n"
+     ]
+    }
+   ],
    "source": [
-    "my_name = 'Ben'\n",
-    "my_age = 15\n",
+    "my_name = 'ben' # the variable called \"my_name\" is given the value 'Ben'\n",
+    "my_age = 15 # the variable called \"my_age\" is given the value 15\n",
     "\n",
     "print('Hello my name is', my_name, 'and I am', my_age, 'years old.')"
    ]
@@ -150,12 +169,12 @@
     "collapsed": true
    },
    "source": [
-    "Multiple variables can be stored in a single **list**..."
+    "Multiple variables can be stored in another type of variable called a **list**..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -164,21 +183,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "barry\n",
-      "['alex', 'barry', 'cynthia']\n",
+      "ben\n",
+      "['alex', 'ben', 'cynthia']\n",
       "edward\n",
+      "['alex', 'cynthia', 'edward']\n",
       "The list has 5 elements.\n"
      ]
     }
    ],
    "source": [
-    "list_of_names = ['alex', 'barry', 'cynthia', 'daisy', 'edward']\n",
+    "list_of_names = ['alex', my_name, 'cynthia', 'daisy', 'edward']\n",
     "\n",
     "print( list_of_names[1] ) # print the **second** name\n",
     "\n",
     "print( list_of_names[0:3] ) # print the first **3** names\n",
     "\n",
     "print( list_of_names[-1] ) # print the last name\n",
+    "\n",
+    "print( list_of_names[0::2] ) # print every other name, synatx is my_list[start:stop:increment]\n",
     "\n",
     "print( 'The list has', len(list_of_names), 'elements.' )"
    ]
@@ -187,9 +209,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(indexing exercise, explicitly show that lists can hold any object, even a list)\n",
-    "hammer in indexing bc people have trouble with it\n",
-    "every other item, the items backwards, etc"
+    "The elements of a list can be just about anything, even lists themselves:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['a', 'b', 5], 'c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list_1 = ['a', 'b', 2+3]\n",
+    "\n",
+    "my_list_2 = [my_list_1, 'c']\n",
+    "\n",
+    "print(my_list_2)"
    ]
   },
   {
@@ -259,28 +302,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "exercise: from a given list of 100 names, ages, and weights, print one line per person\n",
+    "<font color='green'> \n",
+    "**Exercise**: let's generate some fake data on a classroom of students and their test scores.\n",
+    "* run the cell below to load 2 lists: *names* contains some names, and *scores* contains some test scores represented as numbers of 0 to 1 (0 means 0% and 1 means 100%).\n",
+    "* print out the length of both lists to confirm that you have a test score for every student\n",
+    "* using a for loop, print out the students and test scores, with one line per student\n",
+    "* repeat the previous exercise, but with the following modifications: (a) run through the list backwards, (b) consider only every 3rd student\n",
+    "* define a third list, called *indices*, that contains the indices of 14 specific students you want you insepct. Then, use a for loop to display just these students and their scores.\n",
+    "* use your indexing list again, but this time to assign scores randomly to students. Specifically: iterate through 14 student names (could be the first 14, last 14, or anything else of your choosing), but instead of displaying the score associated with that name, display the score corresponding to your index list at the current index.\n",
+    "<br/><center>\n",
     "\n",
-    "first, load the lists\n",
-    "then, inspect them\n",
-    "then, print the stuff out"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "final bonus exercise: same thing but go back and make each first letter of name a capital"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from students import get_students # this will import the code necessary to load the students\n",
+    "names,scores = get_students() # this uses the *get_students* function to load in the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "string manipulation exercises! important\n",
+    "make first letter capital\n"
+   ]
   }
  ],
  "metadata": {
