added more content to lecture 1

--- a/lesson1_intro/intro.ipynb
+++ b/lesson1_intro/intro.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -169,12 +169,12 @@
     "collapsed": true
    },
    "source": [
-    "Multiple variables can be stored in another type of variable called a **list**..."
+    "Multiple variables can be stored in another type of variable called a **list**. Inspect each line of the next code block, and modify it to understand the behavior of lists."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -183,16 +183,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The list has 5 elements.\n",
       "ben\n",
       "['alex', 'ben', 'cynthia']\n",
       "edward\n",
       "['alex', 'cynthia', 'edward']\n",
-      "The list has 5 elements.\n"
+      "The first item is alex\n",
+      "The first two items are ['alex', 'ben']\n"
      ]
     }
    ],
    "source": [
     "list_of_names = ['alex', my_name, 'cynthia', 'daisy', 'edward']\n",
+    "\n",
+    "print( 'The list has', len(list_of_names), 'elements.' )\n",
     "\n",
     "print( list_of_names[1] ) # print the **second** name\n",
     "\n",
@@ -202,7 +206,45 @@
     "\n",
     "print( list_of_names[0::2] ) # print every other name, synatx is my_list[start:stop:increment]\n",
     "\n",
-    "print( 'The list has', len(list_of_names), 'elements.' )"
+    "first_item = list_of_names[0]\n",
+    "print('The first item is', first_item)\n",
+    "\n",
+    "first_two_items = list_of_names[0:2] # note the 0 : *2*\n",
+    "print('The first two items are', first_two_items)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also edit lists..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is the original list: ['alex', 'ben', 'cynthia', 'daisy', 'edward']\n",
+      "Here is the new modified list (#1): ['zorba', 'ben', 'cynthia', 'daisy', 'edward']\n",
+      "Here is the new modified list (#2): ['zorba', 'ben', 'cynthia', 'daisy', 'edward', 'xavier']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Here is the original list:', list_of_names)\n",
+    "\n",
+    "list_of_names[0] = 'zorba' #  change the first element of the list\n",
+    "print('Here is the new modified list (#1):', list_of_names)\n",
+    "\n",
+    "list_of_names.append('xavier') # add another item onto the end of the list\n",
+    "print('Here is the new modified list (#2):', list_of_names)"
    ]
   },
   {
@@ -241,7 +283,7 @@
    "source": [
     "What if you want to do some operation on every item in a list?\n",
     "\n",
-    "**loops**"
+    "Answer: **loops**"
    ]
   },
   {
@@ -317,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -329,13 +371,123 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now you know how to store information in variables, and how to iterate through lists of variables. What if you want to select an action dependent on the value of the variable?\n",
+    "\n",
+    "**\"if\" statements**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The name is Lisa.\n",
+      "The age is less than 25, but it's not 20.\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'lisa'\n",
+    "\n",
+    "if name == 'lisa':\n",
+    "    print('The name is Lisa.')\n",
+    "elif name == 'ahmed':\n",
+    "    print('The name is Ahmed.')\n",
+    "else:\n",
+    "    print('The name is neither Lisa nor Ahmed.')\n",
+    "    \n",
+    "\n",
+    "age = 19\n",
+    "\n",
+    "if age == 20:\n",
+    "    print('The age is 20.')\n",
+    "elif age < 25:\n",
+    "    print(\"The age is less than 25, but it's not 20.\")\n",
+    "elif age > 30:\n",
+    "    print('The age is greater than 30.')\n",
+    "else:\n",
+    "    print('The age must be between 25 and 30.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modify the variables in the above code block to become comfortable with the behavior of \"if\" statements."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color='green'> \n",
+    "**Exercise**: using the previous data about students and their test scores, do the following:\n",
+    "\n",
+    "* iterate through the students, and print the name and score of a student if and only if the student's name begins with an 'A'.\n",
+    "* iterate through the students, and print the name and score of a student if and only if the student's name is exactly 5 characters long.\n",
+    "* iterate through the students, and modify the score of each student based on their name. Specifically, if their name begins with a letter in the first half of the alphabet (A through M), add 5% to their test score. If it begins with a letter from \"P\" to \"U\", add 15% to their test score. Otherwise, leave their score unmodified. Print every student's name and score as you have done before. \n",
+    "* bonus: modify the previous solution, if you did not already, so that no score can be above 100%.\n",
+    "<br/><center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Often your data will come in the form of long, complex strings that need to be split up, manipulated, and analyzed. Python is a particularly good programming language for string parsing. \n",
+    "\n",
+    "In the next block, we will load a variable called *story* into the workspace. This variable is one long string containing a story. Inspect the content of the string. What do you think '\\n' means?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from stories import story"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color='green'> \n",
+    "**Exercise**: \n",
+    "\n",
+    "* using the *split* function, split the story string into a list of sentences. \n",
+    "* for each sentence in your list of sentences, replace the first character with the lowercase version of itself.\n",
+    "* filter the list of sentences to include only those than contain the word 'and' .\n",
+    "* convert your list of sentences into a new single string in which each sentence is separated from the previous by 3 empty lines.\n",
+    "* print out the final new version of the story\n",
+    "<br/><center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What if you want to perform mathematical operations on your variables?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "source": [
-    "string manipulation exercises! important\n",
-    "make first letter capital\n"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
