more updates rto lectures

--- a/lesson1_intro/intro.ipynb
+++ b/lesson1_intro/intro.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "<center>*TA contact info*</center>\n",
-    "I am available for all programming and math-related questions throughout the course. The best way to contact me is by email: \n",
+    "<center>I am available for all programming and math-related questions throughout the course. The best way to contact me is by email: \n",
+    "</center>\n",
     "\n",
     "<center>**deverett@princeton.edu**</center>\n",
     "\n",
@@ -373,6 +374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "Now you know how to store information in variables, and how to iterate through lists of variables. What if you want to select an action dependent on the value of the variable?\n",
     "\n",
     "**\"if\" statements**"
@@ -442,6 +444,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "Often your data will come in the form of long, complex strings that need to be split up, manipulated, and analyzed. Python is a particularly good programming language for string parsing. \n",
     "\n",
     "In the next block, we will load a variable called *story* into the workspace. This variable is one long string containing a story. Inspect the content of the string. What do you think '\\n' means?"
@@ -465,10 +468,11 @@
     "<font color='green'> \n",
     "**Exercise**: \n",
     "\n",
-    "* using the *split* function, split the story string into a list of sentences. \n",
-    "* for each sentence in your list of sentences, replace the first character with the lowercase version of itself.\n",
-    "* filter the list of sentences to include only those than contain the word 'and' .\n",
-    "* convert your list of sentences into a new single string in which each sentence is separated from the previous by 3 empty lines.\n",
+    "* using the *split* function, split the story string into a list of sentences\n",
+    "* for each sentence in your list of sentences, replace the first character with the lowercase version of itself\n",
+    "* for each sentence in your list of sentences, replace every 'a' with 'X'\n",
+    "* filter the list of sentences to include only those than contain the word 'and'\n",
+    "* convert your list of sentences into a new single string in which each sentence is separated from the previous by 3 empty lines\n",
     "* print out the final new version of the story\n",
     "<br/><center>"
    ]
@@ -477,7 +481,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What if you want to perform mathematical operations on your variables?"
+    "Sometimes, you might want to create a list, but instead of the elements being numbered, they are named. In python, this \"named\" type of list is called a *dictionary*.\n",
+    "\n",
+    "The indices of a dictionary are called \"keys,\" and the corresponding values are \"values.\"\n",
+    "\n",
+    "Contrast lists and dictionaries by reviewing the code below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 1]\n",
+      "2\n",
+      "{'b': 2, 'a': 1, 'c': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = ['a', 'b', 'c', 1, 2, 3] # list is a normal list\n",
+    "\n",
+    "print(my_list[0:4])\n",
+    "\n",
+    "my_dict = {'a':1, 'b':2, 'c':3} # this is a dictionary, where the letters are keys and numbers are values\n",
+    "\n",
+    "print(my_dict['b'])\n",
+    "\n",
+    "my_dict['c'] = 5\n",
+    "\n",
+    "print(my_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color='green'> \n",
+    "**Exercise**: convert your *names* and *scores* list from above into a single dictionary, in which the names are the keys, and the scores are the values.\n",
+    "<br/><center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "What if you want to perform mathematical operations on your variables?\n",
+    "\n",
+    "Consider the list of numbers defined in the code block below. Suppose you wanted to multiply all the values in the list by 2. What happens if you simply run `my_list*2`?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "my_list = [1, 5, 11, 3, 90, 62, 8]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because Python is a general purpose programming language, the default behaviors are not necessarily mathematical. Fortunately, there is an excellent package called `numpy` (**num**erical **py**thon) that serves as an engine for mathematics in Python.\n",
+    "\n",
+    "Here is a basic example of numpy. What happens if you multiply the array defined below by 2?"
    ]
   },
   {
@@ -487,7 +565,27 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# a numpy array is like a list, but is more useful for mathematical operations\n",
+    "my_array = np.array([1, 5, 11, 3, 90, 62, 8]) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "That ends this brief intro to Python programming. You should now be comfortable with the following:\n",
+    "\n",
+    "* jupyter notebooks\n",
+    "* variables (strings, numbers, lists)\n",
+    "* for loops\n",
+    "* if statements\n",
+    "* string manipulation\n",
+    "* numpy (know of its existence)"
+   ]
   }
  ],
  "metadata": {
