--- a/lesson2_tweepy/tweepy.ipynb
+++ b/lesson2_tweepy/tweepy.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -116,35 +116,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CNN (@CNN)\n",
-      "Some of the people directly affected by President Trump's travel ban have told us their stories:… https://t.co/JUy5TRiyaC\n",
+      "It bothers him that a woman 🙌🏻 played Spicer? Then with all due respect to Alec Baldwin, let's have women play them… https://t.co/sJCsEVQXXc\n",
       "\n",
-      "The New York Times (@nytimes)\n",
-      "Senator John McCain said parts of President Trump's immigration ban \"will give ISIS some more propaganda\" https://t.co/LYBYJW1hVH\n",
       "\n",
-      "CBC News (@CBCNews)\n",
-      "Shkreli strikes back and new concerns about paid plasma: CBC's health newsletter https://t.co/Zrrtx9Ua0U https://t.co/XadrX9GV61\n",
+      "RT @SeanGugerty: Sean Gugerty tries again to extort Jason Watson to remove Sean Gugerty and Lenrissa Spicer from the website https://t.co/5…\n",
       "\n",
-      "Fox News (@FoxNews)\n",
-      ".@JudgeJeanine on Illegal Immigration: 'Law &amp; Order is Back in the West' https://t.co/oEKUgrRNlQ https://t.co/ZO5NoY0nU5\n",
       "\n",
-      "CBC News (@CBCNews)\n",
-      "RT @CBCAlerts: US Senator John McCain calls Trump's immigration order confusing, saying it 'will probably, in some areas, give ISIS some mo…\n",
+      "RT @MMFlint: I believe Melissa McCarthy has ended the career of Sean Spicer.\n",
       "\n",
-      "CBC News (@CBCNews)\n",
-      "RT @CBCAlerts: Chilean firefighters still fighting raging forest fires, which have so far spread to affect 480,000 hectares.\n",
       "\n",
-      "Fox News (@FoxNews)\n",
-      "Swamp: Drained - @POTUS signs lobbying ban for officials. https://t.co/wksfzSwS1s\n",
+      ".@CNN Trump Upset That a Woman Played Sean Spicer on SNL: Report https://t.co/8M7lACe40h via @intelligencer if Rosie does Bannon, 😂😂 #nodapl\n",
       "\n",
-      "The Economist (@TheEconomist)\n",
-      "Why are the wings of some American cliff swallows getting longer? From the archive https://t.co/spV693HLbV\n",
       "\n",
-      "The New Yorker (@NewYorker)\n",
-      "A cartoon by Roz Chast. Follow our cartoon Instagram to see more: https://t.co/99J6osy5qB https://t.co/bBGJ8cgXhc\n",
+      "RT @ResistanceParty: RT this if u want to see @Rosie play Bannon on @nbcsnl. Reports that @melissamccarthy as Spicer drove him nuts. #Doubl…\n",
       "\n",
-      "Alex Piet (@alexpiet)\n",
-      "RT @wbialek: Previously avoided politics in this venue.  No longer.  Among other stimuli, a young Iranian colleague at Princeton likely tra…\n",
+      "\n",
+      "RT @MMFlint: I believe Melissa McCarthy has ended the career of Sean Spicer.\n",
+      "\n",
+      "\n",
+      "RT @RoguePOTUSStaff: Spicer unhappy that he's been \"set up for failure.\" POTUS furious that one of his \"men\" portrayed by woman. Says it lo…\n",
+      "\n",
+      "\n",
+      "RT @paulkrugman: When Spicer claims anti-Trump demonstrators are hired goons -- it's projection https://t.co/dYIrO7hyre\n",
+      "\n",
+      "\n",
+      "RT @RealMuckmaker: Like I said yesterday,I don't know how Sean Spicer will separate himself from Melissa McCarthy's performance on SNL like…\n",
+      "\n",
+      "\n",
+      "RT @MMFlint: I believe Melissa McCarthy has ended the career of Sean Spicer.\n",
+      "\n",
       "\n"
      ]
     }
@@ -152,13 +152,18 @@
    "source": [
     "n_posts = 10\n",
     "\n",
+    "\"\"\"\n",
     "for tweet in tw.Cursor(api.home_timeline).items(n_posts):\n",
     "    author = tweet.author.name\n",
     "    sname = tweet.author.screen_name\n",
     "    text = tweet.text\n",
     "    \n",
     "    print('{} (@{})\\n{}'.format(author, sname, text))\n",
-    "    print()\n"
+    "    print()\n",
+    "\"\"\"\n",
+    "    \n",
+    "for tweet in tw.Cursor(api.search, q='spicer').items(10):\n",
+    "    print(tweet.text)"
    ]
   },
   {
@@ -171,6 +176,15 @@
     "-put tweets into a pandas object or something\n",
     "-then count frequencies of words"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
