--- a/lesson3_huffpost/huffpost.ipynb
+++ b/lesson3_huffpost/huffpost.ipynb
@@ -35,46 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'charts': [],\n",
-       " 'created_at': datetime.datetime(2017, 1, 25, 16, 13, 2, tzinfo=tzutc()),\n",
-       " 'election_date': None,\n",
-       " 'n_polls': 1,\n",
-       " 'name': '2017 Virginia Gubernatorial GE',\n",
-       " 'responses': [{'incumbent': False,\n",
-       "                'label': 'Wagner',\n",
-       "                'name': 'Frank Wagner',\n",
-       "                'party': 'Republican'},\n",
-       "               {'incumbent': False,\n",
-       "                'label': 'Perriello',\n",
-       "                'name': 'Tom Perriello',\n",
-       "                'party': 'Democrat'},\n",
-       "               {'incumbent': False,\n",
-       "                'label': 'Other',\n",
-       "                'name': 'Other',\n",
-       "                'party': None},\n",
-       "               {'incumbent': False,\n",
-       "                'label': 'Undecided',\n",
-       "                'name': 'Undecided',\n",
-       "                'party': None}],\n",
-       " 'slug': '17-VA-Gov-GE-WavP',\n",
-       " 'tags': []}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "api."
+    "# exercise: plot trump's approval numbers"
    ]
   },
   {
